test_regress/t/t_randomize_inline_var_ctl_unsup_2.out
%Error-UNSUPPORTED: t/t_randomize_inline_var_ctl_unsup.v:25:24: Unsupported: Inline random variable control with 'randomize()' called on complex expressions
   25 |       void'(Foo::get().randomize(x));
      |                        ^~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_randomize_inline_var_ctl_unsup.v:25:34: Can't find definition of variable: 'x'
   25 |       void'(Foo::get().randomize(x));
      |                                  ^
%Error: Exiting due to
